@@ -17,52 +17,6 @@ Otherwise your changes will be overwritten the next time you save the extension 
 
 <f:flashMessages />
 
-    <!-- This is how it should look like in the end-->
-    <ul>
-        <li>Alle Kategorien</li>
-        <li>SAP<ul>
-            <li>Benutzer</li>
-            <li>Datenschutz</li>
-            <li>Allgemein</li>
-        </ul></li>
-        <li>IT<ul>
-            <li>Hardware</li>
-            <li>Software</li>
-            <li>eMail und Internet<ul>
-                <li>Thunderbird</li>
-                <li>Outlook</li>
-                <li>Firefox</li>
-            </ul></li>
-            <li>Sicherheitsrichtlinien</li>
-            <li>Open-Xchange</li>
-            <li>VPN-Zugriff</li>
-        </ul></li>
-        <li>Pr/ÖA<ul>
-            <li>Fitness First</li>
-            <li>Kfz-Werbung</li>
-        </ul></li>
-        <li>PM<ul>
-            <li>Darmkrebsscreening</li>
-            <li>DGUV V2</li>
-        </ul></li>
-        <li>Personal<ul>
-            <li>GBV Sucht</li>
-            <li>Mitarbeiterbefragung</li>
-            <li>MAB Gesundheitsbarometer</li>
-            <li>TV Kilometergeld</li>
-        </ul></li>
-        <li>Tools<ul>
-            <li>ISIS</li>
-            <li>TeamPoint</li>
-            <li>Neue Medien- PreSys 2.0</li>
-            <li>Reisekosten</li>
-        </ul></li>
-
-    </ul>
-
-
-<hr />
-
     <jhe:ul catItems="{catMenus}"/>
 
 </f:section>
