@@ -12,7 +12,7 @@ Tx_Extbase_Utility_Extension::configurePlugin(
 	),
 	// non-cacheable actions
 	array(
-		'CatMenu' => '',
+		'CatMenu' => 'list',
 		
 	)
 );
